--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,9 +39,11 @@ function load_status(){
         row.append(td.clone().text(h.ip));
       }
 
-      if(h.status)
-      {
+      if(h.overall_status == 0){
         row.append(td.clone().text("Ready").addClass('text-success'));
+      }
+      else if(h.overall_status == 1){
+        row.append(td.clone().text("Warning").addClass('text-warning'));
       }
       else {
         row.append(td.clone().text("Error").addClass('text-danger'));
