--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,16 +13,19 @@ function load_status(){
   $.ajax({type: 'GET', url: '/api/status', success: function(data, status, request){
     table = $('#host_info > tbody');
 
-    //clear existing data
+    // setup row objects
     var tr = $('<tr>');
     var td = $('<td>');
+    var device_types = {"esxi": "bi-server", "switch": "bi-hdd-network"};  // map device types to icons
+
+    //clear existing data
     table.empty();
 
     data.forEach(function(h){
       row = tr.clone();
 
       // link for the details
-      details = $('<a>').html('<i class="bi-server"></i> ' + h.name).addClass('ml-2');
+      details = $('<a>').html('<i class="' + device_types[h.type] + '"></i> ' + h.name).addClass('ml-2');
       details.attr('href', '/status/' + h.id);
 
       row.append(td.clone().append(details));
