show link icon - for fun

--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -18,7 +18,7 @@
           {% endif %}
         </p>
         {% if('management_page' in host): %}
-        <a href="{{ host['management_page'] }}" class="card-link" target="_blank">Launch Management</a>
+        <a href="{{ host['management_page'] }}" class="card-link bi-link-45deg" target="_blank">Launch Management</a>
         {% endif %}
       </div>
     </div>
