--- a/web/templates/commands.html
+++ b/web/templates/commands.html
@@ -1,5 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
+
+<div align="right">
+  <button type="button" class="btn btn-danger">Reset Configs</button>
+</div>
+
+{% for aHost in hosts: %}
+<div class="container mb-5">
+  <h3>{{ aHost.name }}</h3>
+
+  {% for cmd in aHost['commands'] %}
+    <div class="row">
+      <div class="col-md-2"><!-- acts as a spacer -->&nbsp;</div>
+    {% if cmd['type'] == 'button' %}
+      <div class="col-md-10"><a class="btn btn-primary" href="/run_command/{{ aHost['id'] }}/{{ cmd['command'] }}">{{ cmd['name'] }}</a></div>
+    {% endif %}
+    </div>
+  {% endfor %}
+</div>
+{% endfor %}
+
 <h3>Firewall - ASA 5506</h3>
 <div class="container">
   <div class="row">
@@ -58,11 +78,6 @@
     </div>
     <div class="col-md-4">
       <button type="button" class="btn btn-primary">Set</button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12 mt-2" align="center">
-      <button type="button" class="btn btn-danger">Reset Config</button>
     </div>
   </div>
 </div>
