--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>DR Dashboard</title>
+        <title>Simple Monitoring</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css" />
         <link rel="stylesheet" href="/static/css/bootstrap-icons.css">
@@ -56,7 +56,7 @@
           <a class="btn btn-secondary float-right" href="/" role="button" id="statusMenu" aria-haspopup="false" aria-expanded="false">
             Status
           </a>
-        <h3 class="text-muted"><span class="text-danger">DR</span> Dashboard</h3>
+        <h3 class="text-muted"><span class="text-danger">Monitor</span> Dashboard</h3>
         </div>
         {% for category,message in get_flashed_messages(with_categories=true) %}
         <div class="alert alert-{{ category }}" role="alert">
@@ -77,7 +77,7 @@
           });
         </script>
         <footer class="footer mt-5">
-             <p align="center"><a href="https://github.com/eau-claire-energy-cooperative/dr-dashboard"><i class="bi-github" style="font-size: 2rem;"></i></a></p>
+             <p align="center"><a href="https://github.com/robweber/simple-monitoring"><i class="bi-github" style="font-size: 2rem;"></i></a></p>
         </footer>
     </body>
 </html>
