--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -11,12 +11,16 @@
   <div class="col-md-4" align="right">
     <div class="card" style="width: 18rem;">
       <div class="card-body">
-        <h5 class="card-title">Type: <span class="text-primary">{{ host['type'].capitalize() }}</span></h5>
+        <h5 class="card-title">Type: <span class="text-primary">{{ host['type'] | capitalize }}</span></h5>
         <p class="card-text">
           IP Address: {{ host['ip'] }} <br />
           {% if 'config' in host %}
             {% for c in host['config'].keys() %}
-              {{ c }}: {{ host['config'][c] }} <br />
+              {% if "password" in c | lower %}
+              {{ c | capitalize }}: ***** <br />
+              {% else %}
+              {{ c | capitalize }}: {{ host['config'][c] }} <br />
+              {% endif %}
             {% endfor %}
           {% endif %}
         </p>
