use launch icon instead of link icon

--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -25,7 +25,7 @@
           {% endif %}
         </p>
         {% if('management_page' in host): %}
-        <a href="{{ host['management_page'] }}" class="card-link bi-link-45deg" target="_blank">Launch Management</a>
+        <a href="{{ host['management_page'] }}" class="card-link" target="_blank"> Launch Management <i class="bi-box-arrow-up-right"></i></a>
         {% endif %}
       </div>
     </div>
