--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,7 +3,8 @@
         <title>Simple Monitoring</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css" />
-        <link rel="stylesheet" href="/static/css/bootstrap-icons.css">
+        <link rel="stylesheet" href="/static/css/materialdesignicons.min.css" />
+        <link rel="stylesheet" href="/static/css/icons.css" />
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/popper.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
@@ -76,7 +77,7 @@
           });
         </script>
         <footer class="footer mt-5">
-             <p align="center"><a href="https://github.com/robweber/simple-monitoring"><i class="bi-github" style="font-size: 2rem;"></i></a></p>
+             <p align="center"><a href="https://github.com/robweber/simple-monitoring"><i class="mdi mdi-github icon-2x"></i></a></p>
         </footer>
     </body>
 </html>
