--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="col-md-8">
-    <h2 class="mb-3">{{ host['name'] }}</h2>
+    <h2 class="mb-3"><i class="mdi mdi-{{ host['icon'] }} icon-2x"></i> {{ host['name'] }}</h2>
     <p>{{ host['info'] }}</p>
   </div>
   <div class="col-md-4" align="right">
@@ -25,7 +25,7 @@
           {% endif %}
         </p>
         {% if('management_page' in host): %}
-        <a href="{{ host['management_page'] }}" class="card-link" target="_blank"> Launch Management <i class="bi-box-arrow-up-right"></i></a>
+        <a href="{{ host['management_page'] }}" class="card-link" target="_blank"> Launch Management <i class="mdi mdi-launch icon-sm icon-inline"></i></a>
         {% endif %}
       </div>
     </div>
