--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -36,10 +36,10 @@ function load_status(){
         aLink.attr('target', "_blank");
         aLink.attr('class', 'mdi mdi-launch icon-sm icon-inline');
 
-        row.append(td.clone().text(h.ip + ' ').append(aLink));
+        row.append(td.clone().text(h.address + ' ').append(aLink));
       }
       else {
-        row.append(td.clone().text(h.ip));
+        row.append(td.clone().text(h.address));
       }
 
       row.append(td.clone().text(h.last_check));
