--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -67,7 +67,7 @@ function load_status(){
 </script>
 {% endblock %}
 {% block content %}
-<p>Status of each hardware component. Click the name of the component to see additional details. Click the IP address to launch the device configuration page.</p>
+<p>The overall status of each host is listed below. Click the name to see additional details. If a management page is configuring it can be launched with the <i class="mdi mdi-launch icon-sm icon-inline"></i> icon.</p>
 <div class="container">
   <table class="table table-striped" id="host_info">
     <thead>
