change files to editor to make more sense

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -18,7 +18,7 @@
               Config
             </a>
               <div class="dropdown-menu" aria-labelledby="configMenu">
-                <a class="dropdown-item" href="/files">Files</a>
+                <a class="dropdown-item" href="/editor">Editor</a>
               </div>
           </div>
           <a class="btn btn-secondary float-right" href="/" role="button" id="statusMenu" aria-haspopup="false" aria-expanded="false">
