change link since the editor is the only item under here

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -13,14 +13,9 @@
     <body>
         <div class="container">
         <div class="header clearfix">
-          <div class="dropdown float-right">
-            <a class="btn btn-secondary dropdown-toggle ml-3" href="/" role="button" id="configMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Config
-            </a>
-              <div class="dropdown-menu" aria-labelledby="configMenu">
-                <a class="dropdown-item" href="/editor">Editor</a>
-              </div>
-          </div>
+          <a class="btn btn-secondary float-right ml-3" href="/editor" role="button" id="editMenu" aria-haspopup="false" aria-expanded="false">
+            Config
+          </a>
           <a class="btn btn-secondary float-right" href="/" role="button" id="statusMenu" aria-haspopup="false" aria-expanded="false">
             Status
           </a>
