--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -15,18 +15,7 @@
         <p class="card-text">
           Last Check: {{ host['last_check'] }} <br />
           Next Check: {{ host['next_check'] }} <br />
-          IP Address: {{ host['address'] }} <br />
-          {% if 'config' in host %}
-            {% for c in host['config'].keys() %}
-              {% if c != 'address' %}
-              {% if "password" in c | lower %}
-              {{ c | capitalize }}: ***** <br />
-              {% else %}
-              {{ c | capitalize }}: {{ host['config'][c] }} <br />
-              {% endif %}
-              {% endif %}
-            {% endfor %}
-          {% endif %}
+          IP Address: {{ host['address'] }}
         </p>
         {% if('management_page' in host): %}
         <a href="{{ host['management_page'] }}" class="card-link" target="_blank"> Launch Management <i class="mdi mdi-launch icon-sm icon-inline"></i></a>
