added mobile styles to hide content at breakpoints for main pages

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css" />
         <link rel="stylesheet" href="/static/css/materialdesignicons.min.css" />
         <link rel="stylesheet" href="/static/css/icons.css" />
+        <link rel="stylesheet" href="/static/css/mobile.css" />
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/popper.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
