--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -4,43 +4,43 @@
 <script src="/static/js/editor.js" type="text/javascript"></script>
 {% endblock %}
 {% block content %}
-<p>Modify individual YAML config files for the monitoring system. Keep in mind that a restart of the service will be needed to make-live any changes. </p>
-<div class="row my-1">
-  <div class="col-md-8">
-    <h3><a href="#" onClick="return toggleFileBrowser()" id="config_path">{{ config_file }}</a></h3>
-  </div>
-  <div class="col-md-4" align="right">
+<div class="container">
+  <p>Modify individual YAML config files for the monitoring system. Keep in mind that a restart of the service will be needed to make-live any changes. </p>
+  <div align="right">
     <button class="btn btn-success mr-1" onClick="saveFile()">Save</button>
     <button class="btn btn-primary" onClick="checkConfig()">Check Config</button>
   </div>
-</div>
-
-<div class="row my-1" id="file_browser" style="display:none">
-  <div class="col-md-2">
-    <!-- nothing here -->
-  </div>
-  <div class="col-md-8">
-    <div class="p-2 font-weight-bold">
-      Path: <span id="file_path"></span>
-    </div>
-    <div id="file_list" class="m-2 p-2 border border-secondary">
-    </div>
-    <div class="row p-2">
-      <div class="col-sm-8">
-      <input type="text" class="form-control" id="new_file_name" />
-      </div>
-      <div class="col-sm-4" align="right">
-        <button class="btn btn-primary" onClick="createFile()">Create File</button>
-      </div>
+  <div class="row my-1">
+    <div class="col-md-8">
+      <h3><a href="#" onClick="return toggleFileBrowser()" id="config_path">{{ config_file }}</a></h3>
     </div>
   </div>
+  <div class="row my-1" id="file_browser" style="display:none">
+    <div class="col-md-2">
+      <!-- nothing here -->
+    </div>
+    <div class="col-md-8">
+      <div class="p-2 font-weight-bold">
+        Path: <span id="file_path"></span>
+      </div>
+      <div id="file_list" class="m-2 p-2 border border-secondary">
+      </div>
+      <div class="row p-2">
+        <div class="col-md-8">
+        <input type="text" class="form-control" id="new_file_name" />
+        </div>
+        <div class="col-md-4" align="right">
+          <button class="btn btn-primary create-file-btn" onClick="createFile()">Create File</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <p id="validation_errors" class="text-danger"></p>
+
+  <textarea class="my-1" id="editor" style="height:200px">
+  </textarea>
 </div>
-
-<p id="validation_errors" class="text-danger"></p>
-
-<textarea class="my-1" id="editor" style="height:200px">
-</textarea>
-
 <script type="text/javascript">
   // load ace editor
   ace.require("ace/ext/language_tools");
